force-app/main/default/objects/Reason_Outcome__c/Reason_Outcome__c.object-meta.xml
<CustomObject>
    <label>Reason Outcome</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Reason Outcome Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reason Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>