force-app/main/default/objects/Reason_Outcome__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Unique external ID of the outcome. It&apos;s a combination of the Reason Code and the Outcome Code. Hide from layout. Used for upsert.</description>
    <externalId>true</externalId>
    <label>External ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>