force-app/main/default/objects/Reason_Outcome__c/fields/Outcome_Code__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Code__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Code of the possible assessment outcome</description>
    <label>Outcome Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>