force-app/main/default/objects/Reason_Outcome__c/fields/Outcome_Description__c.field-meta.xml
<CustomField>
    <fullName>Outcome_Description__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Description of the possible assessment outcome</description>
    <label>Outcome Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>