force-app/main/default/objects/Reason_Outcome__c/fields/Referral_Reason__c.field-meta.xml
<CustomField>
    <fullName>Referral_Reason__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Loan_Domain</complianceGroup>
    <description>Associated referral reason</description>
    <label>Referral Reason</label>
    <referenceTo>Referral_Reason__c</referenceTo>
    <relationshipLabel>Reason Outcomes</relationshipLabel>
    <relationshipName>Reason_Outcomes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>